<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/sign_up_id"
    android:background="#222122">


    <Button
        android:id="@+id/sign_up_done"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/sign_up_continue"
        android:textColor="@color/black"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_phone_number_text" />

    <TextView
        android:id="@+id/sign_up_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:text="@string/sign_up_phone_number"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_text" />

    <TextView
        android:id="@+id/sign_up_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:text="@string/sign_up_email"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_name_text" />

    <ImageView
        android:id="@+id/sign_up_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sign_up" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_sign_up"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_img" />

    <TextView
        android:id="@+id/sign_up_choose_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:text="@string/sign_up_name"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <EditText
        android:id="@+id/sign_up_name_text"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:hint="Full Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_choose_username" />

    <EditText
        android:id="@+id/sign_up_email_text"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password" />

    <EditText
        android:id="@+id/sign_up_phone_number_text"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>