<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activities"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/music_button"
            android:tag="Music"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joystick_button" />

        <ImageButton
            android:id="@+id/art_button"
            android:tag="Art"
            android:layout_width="173dp"
            android:layout_height="168dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#D9D9D9"
...
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/art_button" />


        <Button
            android:id="@+id/next_button_activities"
            android:layout_width="212dp"
            android:layout_height="55dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/inter"
            android:text="@string/next"
            android:textColor="#000000"
...
