<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mood_recurrence"
    android:background="#222121">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFFFF" />

    <ImageView
        tools:ignore="contentDescription"
        android:id="@+id/mood_recur_img"
        android:layout_width="338dp"
        android:layout_height="394dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:srcCompat="@drawable/mood_reflection" />

    <TextView
        android:id="@+id/mood_recur_text"
        android:layout_width="302dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:text="@string/mood_recur_how_often_would_you_like_to_reflect_on_your_mood"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_recur_img" />

    <Spinner
        android:id="@+id/mood_frequency"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_recur_text" />
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_frequency" />
</androidx.constraintlayout.widget.ConstraintLayout>